Media: fix search z-index over sticky bar

--- a/client/my-sites/media-library/style.scss
+++ b/client/my-sites/media-library/style.scss
@@ -57,6 +57,7 @@
 
 	.section-nav {
 		flex: 1 auto;
+		z-index: z-index( 'root', '.media-library .search.is-expanded-to-container' );
 	}
 
 	.plan-storage {
